Milestone1/Assignment 2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    AT_SIGN
    HASH
    LOTBOUND
    NEWLINE
    RESERVED_FALSE
    RESERVED_FORSOME
    RESERVED_IMPLICIT
    RESERVED_LAZY
    RESERVED_OVERRIDE
    RESERVED_PUBLIC
    RESERVED_SEALED
    RESERVED_THROW
    RESERVED_TRAIT
    RESERVED_TRUE
    RESERVED_TYPE
    RESERVED_WITH
    RESERVED_YIELD
    SCOMMENT
    TYPE_ANY
    TYPE_ANYREF
    TYPE_BYTE
    TYPE_DOUBLE
    TYPE_LONG
    TYPE_NOTHING
    TYPE_NULL
    TYPE_SHORT
    TYPE_UNIT
    UPTBOUND
    VIEWBOUND

Grammar

Rule 0     S' -> S
Rule 1     S -> compilation_unit
Rule 2     compilation_unit -> compilation_unit_0 top_stat_seq
Rule 3     compilation_unit_0 -> epsilon
Rule 4     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id sep
Rule 5     compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id
Rule 6     top_stat_seq -> epsilon
Rule 7     top_stat_seq -> top_stat_seq top_stat sep
Rule 8     top_stat_seq -> top_stat_seq top_stat
Rule 9     top_stat -> local_modifier_0 tmpl_def
Rule 10    top_stat -> import
Rule 11    import -> RESERVED_IMPORT import_expr import_0
Rule 12    import_0 -> COMMA import_expr import_0
Rule 13    import_0 -> epsilon
Rule 14    import_expr -> path
Rule 15    modifier_0 -> modifier
Rule 16    modifier_0 -> modifier_0 modifier
Rule 17    modifier -> local_modifier
Rule 18    modifier -> access_modifier
Rule 19    local_modifier_0 -> epsilon
Rule 20    local_modifier_0 -> local_modifier_0 local_modifier
Rule 21    local_modifier -> RESERVED_FINAL
Rule 22    local_modifier -> RESERVED_ABSTRACT
Rule 23    access_modifier -> RESERVED_PRIVATE
Rule 24    access_modifier -> RESERVED_PROTECTED
Rule 25    tmpl_def -> RESERVED_CLASS class_def
Rule 26    tmpl_def -> RESERVED_OBJECT object_def
Rule 27    class_def -> id class_param_clause class_template_opt
Rule 28    class_param_clause -> LPARAN class_params RPARAN
Rule 29    class_params -> epsilon
Rule 30    class_params -> class_param class_param_0
Rule 31    class_param_0 -> epsilon
Rule 32    class_param_0 -> COMMA class_param class_param_0
Rule 33    class_param -> val_var_1 id COLON type eq_expr_1
Rule 34    val_var_1 -> val_var
Rule 35    val_var_1 -> epsilon
Rule 36    val_var -> RESERVED_VAL
Rule 37    val_var -> RESERVED_VAR
Rule 38    eq_expr_1 -> EQ_ASGN expr
Rule 39    eq_expr_1 -> epsilon
Rule 40    class_template_opt -> class_template_opt_1 template_body
Rule 41    class_template_opt_1 -> RESERVED_EXTENDS id
Rule 42    class_template_opt_1 -> epsilon
Rule 43    template_body -> LCURLYB template_body_0 RCURLYB
Rule 44    template_body_0 -> epsilon
Rule 45    template_body_0 -> template_body_0 template_stat sep
Rule 46    template_body_0 -> template_body_0 template_stat
Rule 47    template_stat -> def
Rule 48    template_stat -> dcl
Rule 49    template_stat -> modifier_0 def
Rule 50    template_stat -> modifier_0 dcl
Rule 51    def -> path_var_def
Rule 52    def -> RESERVED_DEF fun_def
Rule 53    def -> tmpl_def
Rule 54    path_var_def -> RESERVED_VAR var_def
Rule 55    path_var_def -> RESERVED_VAL val_def
Rule 56    var_def -> id COLON type EQ_ASGN val_var_init
Rule 57    var_def -> id EQ_ASGN val_var_init
Rule 58    array_size -> LPARAN ints RPARAN
Rule 59    ints -> INT
Rule 60    ints -> INT COMMA ints
Rule 61    val_def -> id COLON type EQ_ASGN val_var_init
Rule 62    val_def -> id EQ_ASGN val_var_init
Rule 63    val_var_init -> array_init
Rule 64    val_var_init -> infix_expr
Rule 65    array_init -> LCURLYB epsilon RCURLYB
Rule 66    array_init -> LCURLYB array_init_0 RCURLYB
Rule 67    array_init -> TYPE_ARRAY LPARAN array_init_0 RPARAN
Rule 68    array_init_0 -> val_var_init
Rule 69    array_init_0 -> array_init_0 COMMA val_var_init
Rule 70    fun_def -> fun_sig col_type_1 EQ_ASGN LCURLYB block RCURLYB
Rule 71    col_type_1 -> COLON type
Rule 72    col_type_1 -> epsilon
Rule 73    fun_sig -> id param_clause
Rule 74    param_clause -> LPARAN RPARAN
Rule 75    param_clause -> LPARAN params RPARAN
Rule 76    params -> param
Rule 77    params -> params COMMA param
Rule 78    param -> RESERVED_VAR id COLON type EQ_ASGN val_var_init
Rule 79    param -> RESERVED_VAR id COLON type
Rule 80    param -> id COLON type EQ_ASGN val_var_init
Rule 81    param -> id COLON type
Rule 82    eq_expr -> epsilon
Rule 83    eq_expr -> EQ_ASGN expr
Rule 84    param_type -> type
Rule 85    dcl -> RESERVED_VAL val_dcl
Rule 86    dcl -> RESERVED_VAR var_dcl
Rule 87    dcl -> RESERVED_DEF fun_dcl
Rule 88    val_dcl -> id COLON type val_dcl_0
Rule 89    val_dcl_0 -> epsilon
Rule 90    val_dcl_0 -> COMMA val_dcl
Rule 91    var_dcl -> id COLON type
Rule 92    fun_dcl -> id param_clause LCURLYB COLON type RCURLYB
Rule 93    path -> id
Rule 94    path -> RESERVED_THIS
Rule 95    path -> path DOT id
Rule 96    path -> RESERVED_SUPER DOT path
Rule 97    block_stat -> def
Rule 98    block_stat -> dcl
Rule 99    block_stat -> expr
Rule 100   block -> epsilon
Rule 101   block -> block_stat sep block
Rule 102   simple_expr -> RESERVED_NEW class_template
Rule 103   simple_expr -> simple_expr1
Rule 104   class_template -> id class_template_1
Rule 105   class_template_1 -> LPARAN id class_template_0 RPARAN
Rule 106   class_template_1 -> LPARAN literal class_template_0 RPARAN
Rule 107   class_template_1 -> LPARAN RPARAN
Rule 108   class_template_0 -> COMMA id class_template_0
Rule 109   class_template_0 -> COMMA literal class_template_0
Rule 110   class_template_0 -> epsilon
Rule 111   simple_expr1 -> literal
Rule 112   simple_expr1 -> ID LSQRB access RSQRB
Rule 113   simple_expr1 -> path
Rule 114   simple_expr1 -> LPARAN exprs_1 RPARAN
Rule 115   simple_expr1 -> simple_expr1 argument_exprs
Rule 116   simple_expr1 -> id RESERVED_MATCH switch_block
Rule 117   prefix_expr -> simple_expr
Rule 118   prefix_expr -> OP_SUB infix_expr
Rule 119   prefix_expr -> OP_ADD infix_expr
Rule 120   prefix_expr -> OP_NOT infix_expr
Rule 121   type -> basic_type
Rule 122   type -> array_type
Rule 123   type -> id
Rule 124   array_type -> TYPE_ARRAY LSQRB type RSQRB array_size
Rule 125   array_type -> TYPE_ARRAY LSQRB type RSQRB
Rule 126   sep -> SEMI_COLON
Rule 127   sep -> epsilon
Rule 128   qual_id -> id
Rule 129   qual_id -> qual_id DOT id
Rule 130   object_def -> id class_template_opt
Rule 131   catch_params -> type id
Rule 132   catch_clause -> RESERVED_CATCH LPARAN catch_params LPARAN LCURLYB block RCURLYB catch_clause_1
Rule 133   catch_clause_1 -> catch_clause
Rule 134   catch_clause_1 -> epsilon
Rule 135   for_logic -> LPARAN for_init sep infix_expr sep for_upd
Rule 136   for_logic -> LPARAN ID LEFTARROW ID RPARAN
Rule 137   for_init -> epsilon
Rule 138   for_init -> path_var_def for_inits
Rule 139   for_init -> var_dcl for_inits
Rule 140   for_init -> infix_expr for_inits
Rule 141   for_inits -> COMMA for_inits
Rule 142   for_inits -> for_init
Rule 143   for_upd -> RPARAN
Rule 144   for_upd -> infix_expr RPARAN
Rule 145   switch_labels -> RESERVED_CASE literal RIGHTARROW
Rule 146   switch_labels -> RESERVED_DEFAULT RIGHTARROW
Rule 147   switch_labels -> RESERVED_CASE RESERVED__ RIGHTARROW
Rule 148   switch_block_statements -> switch_labels LCURLYB block RCURLYB sep
Rule 149   switch_block_statements -> switch_labels LCURLYB block RCURLYB
Rule 150   switch_block_statements -> switch_labels val_var_init
Rule 151   switch_block -> LCURLYB switch_block_statements_0 RCURLYB
Rule 152   switch_block_statements_0 -> switch_block_statements
Rule 153   switch_block_statements_0 -> switch_block_statements_0 switch_block_statements
Rule 154   expr -> RESERVED_IF LPARAN postfix_expr RPARAN LCURLYB block RCURLYB expression1
Rule 155   expr -> RESERVED_WHILE LPARAN postfix_expr RPARAN LCURLYB block RCURLYB
Rule 156   expr -> RESERVED_TRY LCURLYB block RCURLYB catch_clause_1 expression2
Rule 157   expr -> RESERVED_DO LCURLYB block RCURLYB RESERVED_WHILE LPARAN postfix_expr RPARAN
Rule 158   expr -> RESERVED_FOR for_logic LCURLYB block RCURLYB
Rule 159   expr -> RESERVED_RETURN postfix_expr
Rule 160   expr -> RESERVED_RETURN
Rule 161   expr -> RESERVED_BREAK
Rule 162   expr -> RESERVED_CONTINUE
Rule 163   expr -> postfix_expr
Rule 164   expr -> RESERVED_SWITCH LPARAN postfix_expr RPARAN switch_block
Rule 165   expr -> id RESERVED_MATCH switch_block
Rule 166   expression1 -> RESERVED_ELSE LCURLYB block RCURLYB
Rule 167   expression1 -> epsilon
Rule 168   expression2 -> RESERVED_FINALLY LCURLYB block RCURLYB
Rule 169   expression2 -> epsilon
Rule 170   argument_exprs -> LPARAN exprs_1 RPARAN
Rule 171   exprs_1 -> postfix_expr
Rule 172   exprs_1 -> epsilon
Rule 173   exprs_1 -> exprs_1 COMMA postfix_expr
Rule 174   postfix_expr -> infix_expr id_1
Rule 175   postfix_expr -> infix_expr
Rule 176   id_1 -> id
Rule 177   id_1 -> id_1 id
Rule 178   infix_expr -> assign
Rule 179   infix_expr -> or_expression
Rule 180   assign -> simple_expr1 asgn or_expression
Rule 181   or_expression -> and_expression
Rule 182   or_expression -> or_expression OP_OR and_expression
Rule 183   xor_expression -> and_expression
Rule 184   xor_expression -> xor_expression OP_XOR and_expression
Rule 185   and_expression -> bit_or_expression
Rule 186   and_expression -> and_expression OP_AND bit_or_expression
Rule 187   bit_or_expression -> bit_and_expression
Rule 188   bit_or_expression -> bit_or_expression LO_OR bit_and_expression
Rule 189   bit_and_expression -> eq_expression
Rule 190   bit_and_expression -> bit_and_expression LO_AND eq_expression
Rule 191   eq_expression -> comp_expression
Rule 192   eq_expression -> eq_expression EQ comp_expression
Rule 193   eq_expression -> eq_expression NEQ comp_expression
Rule 194   comp_expression -> shift_expression
Rule 195   comp_expression -> comp_expression LEQ shift_expression
Rule 196   comp_expression -> comp_expression LT shift_expression
Rule 197   comp_expression -> comp_expression GEQ shift_expression
Rule 198   comp_expression -> comp_expression GT shift_expression
Rule 199   shift_expression -> add_expression
Rule 200   shift_expression -> shift_expression OP_RSHIFT add_expression
Rule 201   shift_expression -> shift_expression OP_LSHIFT add_expression
Rule 202   shift_expression -> shift_expression OP_RRSHIFT add_expression
Rule 203   add_expression -> mul_expression
Rule 204   add_expression -> add_expression OP_ADD mul_expression
Rule 205   add_expression -> add_expression OP_SUB mul_expression
Rule 206   mul_expression -> unary_expression
Rule 207   mul_expression -> mul_expression OP_MOD unary_expression
Rule 208   mul_expression -> mul_expression OP_MULT unary_expression
Rule 209   mul_expression -> mul_expression OP_DIVIDE unary_expression
Rule 210   unary_expression -> prefix_expr
Rule 211   unary_expression -> LPARAN infix_expr RPARAN
Rule 212   asgn -> EQ_ASGN
Rule 213   asgn -> ADD_ASGN
Rule 214   asgn -> SUB_ASGN
Rule 215   asgn -> MULT_ASGN
Rule 216   asgn -> DIV_ASGN
Rule 217   asgn -> MOD_ASGN
Rule 218   asgn -> LSHIFT_ASGN
Rule 219   asgn -> RSHIFT_ASGN
Rule 220   asgn -> AND_ASGN
Rule 221   asgn -> OR_ASGN
Rule 222   asgn -> XOR_ASGN
Rule 223   basic_type -> TYPE_INT
Rule 224   basic_type -> TYPE_FLOAT
Rule 225   basic_type -> TYPE_CHAR
Rule 226   basic_type -> TYPE_STRING
Rule 227   basic_type -> TYPE_BOOLEAN
Rule 228   basic_type -> RESERVED_NULL
Rule 229   id -> ID
Rule 230   access -> ID
Rule 231   access -> literal
Rule 232   access -> access COMMA ID
Rule 233   access -> access COMMA literal
Rule 234   literal -> BOOL
Rule 235   literal -> INT
Rule 236   literal -> CHAR
Rule 237   literal -> STRING
Rule 238   literal -> FLOAT
Rule 239   epsilon -> <empty>

Terminals, with rules where they appear

ADD_ASGN             : 213
AND_ASGN             : 220
ARRAY                : 
AT_SIGN              : 
BOOL                 : 234
CHAR                 : 236
COLON                : 33 56 61 71 78 79 80 81 88 91 92
COMMA                : 12 32 60 69 77 90 108 109 141 173 232 233
DIV_ASGN             : 216
DOT                  : 95 96 129
EQ                   : 192
EQ_ASGN              : 38 56 57 61 62 70 78 80 83 212
FLOAT                : 238
GEQ                  : 197
GT                   : 198
HASH                 : 
ID                   : 112 136 136 229 230 232
INT                  : 59 60 235
LCURLYB              : 43 65 66 70 92 132 148 149 151 154 155 156 157 158 166 168
LEFTARROW            : 136
LEQ                  : 195
LOTBOUND             : 
LO_AND               : 190
LO_OR                : 188
LPARAN               : 28 58 67 74 75 105 106 107 114 132 132 135 136 154 155 157 164 170 211
LSHIFT_ASGN          : 218
LSQRB                : 112 124 125
LT                   : 196
MOD_ASGN             : 217
MULT_ASGN            : 215
NEQ                  : 193
NEWLINE              : 
OP_ADD               : 119 204
OP_AND               : 186
OP_DIVIDE            : 209
OP_LSHIFT            : 201
OP_MOD               : 207
OP_MULT              : 208
OP_NOT               : 120
OP_OR                : 182
OP_RRSHIFT           : 202
OP_RSHIFT            : 200
OP_SUB               : 118 205
OP_XOR               : 184
OR_ASGN              : 221
RCURLYB              : 43 65 66 70 92 132 148 149 151 154 155 156 157 158 166 168
RESERVED_ABSTRACT    : 22
RESERVED_BREAK       : 161
RESERVED_CASE        : 145 147
RESERVED_CATCH       : 132
RESERVED_CLASS       : 25
RESERVED_CONTINUE    : 162
RESERVED_DEF         : 52 87
RESERVED_DEFAULT     : 146
RESERVED_DO          : 157
RESERVED_ELSE        : 166
RESERVED_EXTENDS     : 41
RESERVED_FALSE       : 
RESERVED_FINAL       : 21
RESERVED_FINALLY     : 168
RESERVED_FOR         : 158
RESERVED_FORSOME     : 
RESERVED_IF          : 154
RESERVED_IMPLICIT    : 
RESERVED_IMPORT      : 11
RESERVED_LAZY        : 
RESERVED_MATCH       : 116 165
RESERVED_NEW         : 102
RESERVED_NULL        : 228
RESERVED_OBJECT      : 26
RESERVED_OVERRIDE    : 
RESERVED_PACKAGE     : 4 5
RESERVED_PRIVATE     : 23
RESERVED_PROTECTED   : 24
RESERVED_PUBLIC      : 
RESERVED_RETURN      : 159 160
RESERVED_SEALED      : 
RESERVED_SUPER       : 96
RESERVED_SWITCH      : 164
RESERVED_THIS        : 94
RESERVED_THROW       : 
RESERVED_TRAIT       : 
RESERVED_TRUE        : 
RESERVED_TRY         : 156
RESERVED_TYPE        : 
RESERVED_VAL         : 36 55 85
RESERVED_VAR         : 37 54 78 79 86
RESERVED_WHILE       : 155 157
RESERVED_WITH        : 
RESERVED_YIELD       : 
RESERVED__           : 147
RIGHTARROW           : 145 146 147
RPARAN               : 28 58 67 74 75 105 106 107 114 136 143 144 154 155 157 164 170 211
RSHIFT_ASGN          : 219
RSQRB                : 112 124 125
SCOMMENT             : 
SEMI_COLON           : 126
STRING               : 237
SUB_ASGN             : 214
TYPE_ANY             : 
TYPE_ANYREF          : 
TYPE_ARRAY           : 67 124 125
TYPE_BOOLEAN         : 227
TYPE_BYTE            : 
TYPE_CHAR            : 225
TYPE_DOUBLE          : 
TYPE_FLOAT           : 224
TYPE_INT             : 223
TYPE_LONG            : 
TYPE_NOTHING         : 
TYPE_NULL            : 
TYPE_SHORT           : 
TYPE_STRING          : 226
TYPE_UNIT            : 
UPTBOUND             : 
VIEWBOUND            : 
XOR_ASGN             : 222
error                : 

Nonterminals, with rules where they appear

S                    : 0
access               : 112 232 233
access_modifier      : 18
add_expression       : 199 200 201 202 204 205
and_expression       : 181 182 183 184 186
argument_exprs       : 115
array_init           : 63
array_init_0         : 66 67 69
array_size           : 124
array_type           : 122
asgn                 : 180
assign               : 178
basic_type           : 121
bit_and_expression   : 187 188 190
bit_or_expression    : 185 186 188
block                : 70 101 132 148 149 154 155 156 157 158 166 168
block_stat           : 101
catch_clause         : 133
catch_clause_1       : 132 156
catch_params         : 132
class_def            : 25
class_param          : 30 32
class_param_0        : 30 32
class_param_clause   : 27
class_params         : 28
class_template       : 102
class_template_0     : 105 106 108 109
class_template_1     : 104
class_template_opt   : 27 130
class_template_opt_1 : 40
col_type_1           : 70
comp_expression      : 191 192 193 195 196 197 198
compilation_unit     : 1
compilation_unit_0   : 2 4 5
dcl                  : 48 50 98
def                  : 47 49 97
epsilon              : 3 6 13 19 29 31 35 39 42 44 65 72 82 89 100 110 127 134 137 167 169 172
eq_expr              : 
eq_expr_1            : 33
eq_expression        : 189 190 192 193
expr                 : 38 83 99
expression1          : 154
expression2          : 156
exprs_1              : 114 170 173
for_init             : 135 142
for_inits            : 138 139 140 141
for_logic            : 158
for_upd              : 135
fun_dcl              : 87
fun_def              : 52
fun_sig              : 70
id                   : 27 33 41 56 57 61 62 73 78 79 80 81 88 91 92 93 95 104 105 108 116 123 128 129 130 131 165 176 177
id_1                 : 174 177
import               : 10
import_0             : 11 12
import_expr          : 11 12
infix_expr           : 64 118 119 120 135 140 144 174 175 211
ints                 : 58 60
literal              : 106 109 111 145 231 233
local_modifier       : 17 20
local_modifier_0     : 9 20
modifier             : 15 16
modifier_0           : 16 49 50
mul_expression       : 203 204 205 207 208 209
object_def           : 26
or_expression        : 179 180 182
param                : 76 77
param_clause         : 73 92
param_type           : 
params               : 75 77
path                 : 14 95 96 113
path_var_def         : 51 138
postfix_expr         : 154 155 157 159 163 164 171 173
prefix_expr          : 210
qual_id              : 4 5 129
sep                  : 4 7 45 101 135 135 148
shift_expression     : 194 195 196 197 198 200 201 202
simple_expr          : 117
simple_expr1         : 103 115 180
switch_block         : 116 164 165
switch_block_statements : 152 153
switch_block_statements_0 : 151 153
switch_labels        : 148 149 150
template_body        : 40
template_body_0      : 43 45 46
template_stat        : 45 46
tmpl_def             : 9 53
top_stat             : 7 8
top_stat_seq         : 2 7 8
type                 : 33 56 61 71 78 79 80 81 84 88 91 92 124 125 131
unary_expression     : 206 207 208 209
val_dcl              : 85 90
val_dcl_0            : 88
val_def              : 55
val_var              : 34
val_var_1            : 33
val_var_init         : 56 57 61 62 68 69 78 80 150
var_dcl              : 86 139
var_def              : 54
xor_expression       : 184

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . compilation_unit
    (2) compilation_unit -> . compilation_unit_0 top_stat_seq
    (3) compilation_unit_0 -> . epsilon
    (4) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> . compilation_unit_0 RESERVED_PACKAGE qual_id
    (239) epsilon -> .

    RESERVED_PACKAGE reduce using rule 239 (epsilon -> .)
    RESERVED_IMPORT reduce using rule 239 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 239 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 239 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 239 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 239 (epsilon -> .)
    $end            reduce using rule 239 (epsilon -> .)

    S                              shift and go to state 1
    compilation_unit               shift and go to state 2
    compilation_unit_0             shift and go to state 3
    epsilon                        shift and go to state 4

state 1

    (0) S' -> S .



state 2

    (1) S -> compilation_unit .

    $end            reduce using rule 1 (S -> compilation_unit .)


state 3

    (2) compilation_unit -> compilation_unit_0 . top_stat_seq
    (4) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 . RESERVED_PACKAGE qual_id
    (6) top_stat_seq -> . epsilon
    (7) top_stat_seq -> . top_stat_seq top_stat sep
    (8) top_stat_seq -> . top_stat_seq top_stat
    (239) epsilon -> .

    RESERVED_PACKAGE shift and go to state 6
    RESERVED_IMPORT reduce using rule 239 (epsilon -> .)
    RESERVED_CLASS  reduce using rule 239 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 239 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 239 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 239 (epsilon -> .)
    $end            reduce using rule 239 (epsilon -> .)

    top_stat_seq                   shift and go to state 5
    epsilon                        shift and go to state 7

state 4

    (3) compilation_unit_0 -> epsilon .

    RESERVED_PACKAGE reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_IMPORT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_CLASS  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 3 (compilation_unit_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 3 (compilation_unit_0 -> epsilon .)
    $end            reduce using rule 3 (compilation_unit_0 -> epsilon .)


state 5

    (2) compilation_unit -> compilation_unit_0 top_stat_seq .
    (7) top_stat_seq -> top_stat_seq . top_stat sep
    (8) top_stat_seq -> top_stat_seq . top_stat
    (9) top_stat -> . local_modifier_0 tmpl_def
    (10) top_stat -> . import
    (19) local_modifier_0 -> . epsilon
    (20) local_modifier_0 -> . local_modifier_0 local_modifier
    (11) import -> . RESERVED_IMPORT import_expr import_0
    (239) epsilon -> .

    $end            reduce using rule 2 (compilation_unit -> compilation_unit_0 top_stat_seq .)
    RESERVED_IMPORT shift and go to state 12
    RESERVED_CLASS  reduce using rule 239 (epsilon -> .)
    RESERVED_OBJECT reduce using rule 239 (epsilon -> .)
    RESERVED_FINAL  reduce using rule 239 (epsilon -> .)
    RESERVED_ABSTRACT reduce using rule 239 (epsilon -> .)

    top_stat                       shift and go to state 8
    local_modifier_0               shift and go to state 9
    import                         shift and go to state 10
    epsilon                        shift and go to state 11

state 6

    (4) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id sep
    (5) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE . qual_id
    (128) qual_id -> . id
    (129) qual_id -> . qual_id DOT id
    (229) id -> . ID

    ID              shift and go to state 15

    qual_id                        shift and go to state 13
    id                             shift and go to state 14

state 7

    (6) top_stat_seq -> epsilon .

    RESERVED_IMPORT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_CLASS  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_OBJECT reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_FINAL  reduce using rule 6 (top_stat_seq -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 6 (top_stat_seq -> epsilon .)
    $end            reduce using rule 6 (top_stat_seq -> epsilon .)


state 8

    (7) top_stat_seq -> top_stat_seq top_stat . sep
    (8) top_stat_seq -> top_stat_seq top_stat .
    (126) sep -> . SEMI_COLON
    (127) sep -> . epsilon
    (239) epsilon -> .

  ! reduce/reduce conflict for RESERVED_IMPORT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_CLASS resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_OBJECT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_FINAL resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for RESERVED_ABSTRACT resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
  ! reduce/reduce conflict for $end resolved using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_IMPORT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_CLASS  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_OBJECT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_FINAL  reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    RESERVED_ABSTRACT reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    $end            reduce using rule 8 (top_stat_seq -> top_stat_seq top_stat .)
    SEMI_COLON      shift and go to state 17

  ! RESERVED_IMPORT [ reduce using rule 239 (epsilon -> .) ]
  ! RESERVED_CLASS  [ reduce using rule 239 (epsilon -> .) ]
  ! RESERVED_OBJECT [ reduce using rule 239 (epsilon -> .) ]
  ! RESERVED_FINAL  [ reduce using rule 239 (epsilon -> .) ]
  ! RESERVED_ABSTRACT [ reduce using rule 239 (epsilon -> .) ]
  ! $end            [ reduce using rule 239 (epsilon -> .) ]

    sep                            shift and go to state 16
    epsilon                        shift and go to state 18

state 9

    (9) top_stat -> local_modifier_0 . tmpl_def
    (20) local_modifier_0 -> local_modifier_0 . local_modifier
    (25) tmpl_def -> . RESERVED_CLASS class_def
    (26) tmpl_def -> . RESERVED_OBJECT object_def
    (21) local_modifier -> . RESERVED_FINAL
    (22) local_modifier -> . RESERVED_ABSTRACT

    RESERVED_CLASS  shift and go to state 21
    RESERVED_OBJECT shift and go to state 22
    RESERVED_FINAL  shift and go to state 23
    RESERVED_ABSTRACT shift and go to state 24

    tmpl_def                       shift and go to state 19
    local_modifier                 shift and go to state 20

state 10

    (10) top_stat -> import .

    SEMI_COLON      reduce using rule 10 (top_stat -> import .)
    RESERVED_IMPORT reduce using rule 10 (top_stat -> import .)
    RESERVED_CLASS  reduce using rule 10 (top_stat -> import .)
    RESERVED_OBJECT reduce using rule 10 (top_stat -> import .)
    RESERVED_FINAL  reduce using rule 10 (top_stat -> import .)
    RESERVED_ABSTRACT reduce using rule 10 (top_stat -> import .)
    $end            reduce using rule 10 (top_stat -> import .)


state 11

    (19) local_modifier_0 -> epsilon .

    RESERVED_CLASS  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_OBJECT reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_FINAL  reduce using rule 19 (local_modifier_0 -> epsilon .)
    RESERVED_ABSTRACT reduce using rule 19 (local_modifier_0 -> epsilon .)


state 12

    (11) import -> RESERVED_IMPORT . import_expr import_0
    (14) import_expr -> . path
    (93) path -> . id
    (94) path -> . RESERVED_THIS
    (95) path -> . path DOT id
    (96) path -> . RESERVED_SUPER DOT path
    (229) id -> . ID

    RESERVED_THIS   shift and go to state 28
    RESERVED_SUPER  shift and go to state 29
    ID              shift and go to state 15

    import_expr                    shift and go to state 25
    path                           shift and go to state 26
    id                             shift and go to state 27

state 13

    (4) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id . sep
    (5) compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .
    (129) qual_id -> qual_id . DOT id
    (126) sep -> . SEMI_COLON
    (127) sep -> . epsilon
    (239) epsilon -> .

  ! reduce/reduce conflict for RESERVED_PACKAGE resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_IMPORT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_CLASS resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_OBJECT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_FINAL resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for RESERVED_ABSTRACT resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
  ! reduce/reduce conflict for $end resolved using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_PACKAGE reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_IMPORT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_CLASS  reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_OBJECT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_FINAL  reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    RESERVED_ABSTRACT reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    $end            reduce using rule 5 (compilation_unit_0 -> compilation_unit_0 RESERVED_PACKAGE qual_id .)
    DOT             shift and go to state 31
    SEMI_COLON      shift and go to state 17
